--- a/Capitulos/cap3.tex
+++ b/Capitulos/cap3.tex
@@ -44,7 +44,7 @@ La noción de evolución por muchos estados diferentes se puede escribir matemá
 \end{equation}
 luego el operador de densidad es 
 \begin{equation}
-\rho(t)=\sum_{k,l} c_{k} c_{l}^{*} e^{-i(E_{k}-E_{l})t}\ket{E_{k}} \bra{E_{l}}
+\rho(t)=\sum_{k,l} c_{k} c_{l}^{*} e^{\frac{-i(E_{k}-E_{l})t}{\hbar}}\ket{E_{k}} \bra{E_{l}}
 \end{equation}
 entonces su promedio temporal es, recordando la condición de no degeneración de los niveles de energía
 \begin{equation}
@@ -56,6 +56,137 @@ d^{eff}(\omega)=\frac{1}{Tr(\omega^{2})}=\frac{1}{\sum_{k} |c_{k}|^{4} }
 \end{equation}
 De la misma manera el hechode que el baño pase por muchos estados diferentes viene dado por $d^{eff}(\omega_{B})$ por $\omega_{B}=\langle \rho(t) \rangle_{t}$. Como se espera que el baño al evolucionar pase por muchos más estados dado que el subsistema debe seguir evolucionando y el subsistema quede en un espacio de estados más pequeños se preve que $d^{eff}(\omega_{B})$ sea mucho más grande que $d_{S}$. Para formular ya el primer teorema se quiere ver la distancia entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}= \langle \rho_{S}(t) \rangle_{t}$. Como se espera que $\rho_{S}(t) $ vaya fluctuando alrededor de $\omega_{S}$ se analizará el promedio temporal de su distancia $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ cuando este sea muy pequeño el subsistema debe pasar gran parte del tiempo muy cerca a $\omega_{S}$. Esto quiere decir que el subsistema se equilibrará(según la definición anterior) a $\omega_{S}$.
 
+\textbf{Teorema 1}:Considere cualquier estado $\ket{\psi(t)} \in \mathcal{H}$ evolucionando bajo un Hamiltoniano con brechas de energía no-degeneradas. Luego la distancia promedio entre $\rho_{S}(t)$ y su promedio temporal $\omega_{S}$ está acotado por:
 
+\begin{equation}
+\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t} \le \frac{1}{2} \sqrt{\frac{d_{S}}{d^{eff}(\omega-{B})}} \le \sqrt{\frac{d_{S}^{2}}{d^{eff}(\omega)}}.
+\end{equation}
+\textbf{Demostración}:Por la relación ya conocida entre la distanacia de traza y la norma de Hilbert-Schimidt que se usó en el capítulo anterior
+
+\begin{equation}
+\norm{M}_{1} \le \sqrt{n}\norm{M}_{2}
+\end{equation}
+
+se usa para la el operador $D(\rho_{1}, \rho_{2})$:
+
+\begin{equation}
+\frac{1}{2} Tr_{S} \sqrt{(\rho_{1} - \rho_{2})^{2}} \le \frac{1}{2}\sqrt{d_{S} Tr_{S} (\rho_{1}- \rho_{2})^{2}}
+\end{equation}
+Por la concavidad de la función raíz cuadrada
+
+\begin{equation}
+\langle D(\rho_{S}(t),\omega_{S}) \rangle_{t} \le \sqrt{  d_{S} \Big \langle Tr_{S}(\rho_{S}(t)-\omega_{S})^{2} \Big \rangle_{t}}
+\end{equation}
+
+usando las expansiones para $\rho_{S}$ y $\omega_{S}$
+\begin{equation}
+\rho_{S}(t)=\sum_{k,l} c_{k} c_{l}^{*} e^{\frac{-i(E_{k}-E_{l})t}{\hbar}} Tr_{B} (\ket{E_{k}} \bra{E_{l}}),
+\end{equation}
+
+\begin{equation}
+\omega_{S} = \sum |c_{k}|^{2} Tr_{B}(\ket{E_{k}} \bra{E_{k}}),
+\end{equation}
+
+se puede escribir $\langle Tr_{S}(\rho_{S}(t)-\omega_{S})^{2} \rangle_{t}$ como 
+
+\begin{equation}
+\langle Tr_{S}(\rho_{S}(t)-\omega_{S})^{2} \rangle_{t}=\sum_{k \neq l} \sum_{m \neq n} \mathcal{T}_{klmn} Tr_{S} [Tr_{B}(\ket{E_{k}} \bra{E_{l}}) Tr_{B}(\ket{E_{k}} \bra{E_{l}})]
+\end{equation}
+donde $\mathcal{T}_{klmn}$ es :
+\begin{equation}
+\mathcal{T}_{klmn}=c_{k}c_{l}^{*}c_{m}c_{n}^{*} \Big \langle e^{\frac{-i(E_{k}-E_{l}+E_{m}-E_{n})t}{\hbar}} \Big \rangle_{t}
+\end{equation}
+debido a la restricción impuesta al Hamiltoniano de brechas de energías no degeneradas y como solo se toman elementos $k \neq l$ y $m\neq n$ los terminos que son diferentes de $0$ son $k=n$ y $l=m$.
+
+Luego
+ 
+\begin{multline}
+\langle Tr_{S}(\rho_{S}(t)-\omega_{S})^{2} \rangle_{t} \\
+	= \sum_{k \neq l} |c_{k}|^{2} |c_{l}|^{2} Tr_{S} [Tr_{B}(\ket{E_{k}} \bra{E_{l}}) Tr_{B}(\ket{E_{k}} \bra{E_{l}})] \\
+	=\sum_{k \neq l} |c_{k}|^{2} |c_{l}|^{2} \sum_{ss' bb'} \bra{sb}\ket{E_{k}} \bra{E_{l}}\ket{s'b} \bra{s'b'}\ket{E_{l}} \bra{E_{k}}\ket{sb'} \\
+	=\sum_{k \neq l} |c_{k}|^{2} |c_{l}|^{2} \sum_{ss' bb'} \bra{sb}\ket{E_{k}} \bra{E_{k}}\ket{sb'} \bra{s'b'}\ket{E_{l}} \bra{E_{l}}\ket{s'b}\\
+	=\sum_{k \neq l} |c_{k}|^{2} |c_{l}|^{2} Tr_{B} [Tr_{S}(\ket{E_{k}} \bra{E_{k}}) Tr_{S}(\ket{E_{l}} \bra{E_{l}})] \\
+	=\sum_{k \neq l}  Tr_{B} [Tr_{S}(|c_{k}|^{2}\ket{E_{k}} \bra{E_{k}}) Tr_{S}( |c_{l}|^{2} \ket{E_{l}} \bra{E_{l}})] 
+\end{multline}
+recordando la definición de $\omega_{B}$ y observando la segunda línea de la ecuación anterior
+\begin{equation}
+Tr_{B} \omega_{B}^{2} -\sum_{k} |c_{k}|^{2} Tr_{S}[ Tr_{B}( \ket{E_{k}} \bra{E_{k}})]^{2} \leq  Tr_{B}( \omega_{B}^{2}).
+\end{equation}
+
+Por la subaditividad débil de la entropía de Rényi:
+
+\begin{equation}
+Tr(\omega^{2}) \geq  \frac{Tr_{B}(\omega_{B}^{2})}{Rank(\rho_{S})} \geq \frac{Tr_{B}(\omega_{B}^{2})}{d_{S}}
+\end{equation}
+
+uniendo todos los resultados con la desigualdad inicial del promedio de la distancia
+
+\begin{equation}
+\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t} \le  \frac{1}{2} \sqrt{d_{S} Tr_{B}(\omega_{B}^{2})} \le \frac{1}{2}\sqrt{d_{S}^{2}Tr(\omega^{2})}=\frac{1}{2}\sqrt{\frac{d_{S}^{2}}{d^{eff}(\omega)}}.
+\end{equation}
+
+Con este resultado se puede hablar de la termalización de una forma matemática consto se ve que el subsistema se equilibra cuando la dimensión de $d^{eff}(\omega)$ sea mucho mayor que la dimensión de dos copias del subsistema ($d_{S}^{2}$) o cuando la dimensión efectiva explorada por el baño $d^{eff}(\omega_{B})$ sea mucho más grande que la dimensión del subsistema.
+EL resultado anterior tiene varias generalidades que se quiere recodar. La restricción impuesta sobre el Hamiltoniano  es una que no excluye muchos Hamiltonianos. Además de que esta ha sido la única restricción sobre todo el sistema , no se ha especificado nada del baño ni del subsistema. El baño no está necesariamente en equilibrio no se le ha dado ninguna interpretación térmica a ningún objeto tratado hasta ahora. no se ha hablado tampoco de ninguna forma en la que el subsistema llega al equilibrio ni que esta en algún estado específico.
+Los valores propios de energía tampoco son importantes en las cotas dadas anteriormente, en el teorema al ser demostrado fue encontrado algunos valores propios de energía que al ser promediados dan 0. La energía es importante al buscar las formas exactas en las que evoluciona el sistema pero aquí se demostró que para la equilibración en intervalos de tiempo muy grandes no son muy importantes , las cotas son independientes del tiempo . La forma en que se dividió el sistema(subsistema y baño) solo es importante para el teorema 1 la dimensión del subsistema y no la especificación de la forma o un subsistema particular. Esto permite decir que cualquier subsistema con dimensión $d_{S}$ estará en equilibrio, los varios subsistemas bastante pequeños de dimensión $d_{S}$ también estarán en equilibrio.
+\textbf{Equilibrio de conjuntos típicos}
+Aunque se puso una cota a la fluctuación de $\rho_{S}(t)$ alrededor de $\omega_{S}$ se quiere ver cuales casos esta fluctuación es tan pequeña que el subsistema se equilibrará para esto se mostrará el siguiente teorema\\
+\textbf{Terorema2}:
+i)El promedio de la dimensión efectiva $\langle d^{eff}(\omega) \rangle_{\psi}$, donde el promedio es sobre estados puros aleatorios uniformemente distribuidos $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$. Es tal que 
+\begin{equation}
+\langle d^{eff}(\omega) \rangle_{\psi} \ge \frac{d_{R}}{2}
+\end{equation}
+ii)Para un estado aleatorio $\ket{\psi} \in \mathcal{H}_{R} \subset \mathcal{H}$, la probabilidad $Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \}$ de que $d^{eff}(\omega)$ es más pequeña que $\frac{d_{R}}{4}$ es:
+\begin{equation}
+Pr_{\psi} \{ d^{eff}(\omega) < \frac{d_{R}}{4}  \} \leq 2 \exp{-C \sqrt{d_{R}}}
+\end{equation}
+con constante $c= \frac{(ln 2)^{2}}{72 \pi^{3}} \approx 10^{-4}$.
+La primera parte del teorema 2 nos habla de cómo el promedio de la dimensión efectiva es más grande que la dimensión del subespacio de Hilbert esto significa que si se tiene estados de un subespacio bastante grande se puede asegurar un $d^{eff}(\omega)$ grane que implica un $\langle D(\rho_{S}(t) ,\omega_{S}) \rangle_{t}$ pequeño. La segunda parte solo confirma de manera más estricta el hecho de encontrar un $d^{eff}(\omega)$ pequeño, mostrando que la probabilidad de encontrar una dimensión efectiva menor a $\frac{d_{R}}{4}$ es exponencialmente pequeña.\\
+\textbf{equilibrio de estados genéricos}:
+usando el teorema 2 para ver qué ocurre con un estado escogido de forma aleatorio del espacio total $\mathcal{H}$, un estado genérico. Esto es simplemente poner $d_{R}=d$ gracias a esto se comprende que $d^{eff}(\omega)~d$ ya que  hay una probabilidad exponencialmente baja para que se dé  el caso en que $d^{eff} < \frac{d}{4}$.Dado que $d=d_{S}d_{B}$ la cota para las fluctuaciones queda $\sqrt{\frac{d_{S}}{d_{B}}}$ para un sistema de muchas partículas la dimensión del espacio de Hilbert crece de manera exponencial, si el subsistema es una fracción constante del número de partículas del baño esta proporción caerá de manera exponencial con el número total de de partículas luego los subsistemas se equilibrarán.\\
+\textbf{Equilibración de sistemas lejanos del equilibrio}:
+Qué ocurre con los sistemas que están lejos del equilibrio. Lo dicho arriba ya cualquier se pensaría que  que cualquier sistema debe llegar al equilibrio pero esto no es cierto debido a que arriba se usó un estado genérico y los estados lejos del equilibrio no son genéricos; los estados lejos del equilibrio no son típicos por el capítulo anterior se sabe que cono cotas exponenciales la mayoría de los estados en el espacio de Hilbert son tales que un subsistema pequeño está en un estado canónico. Para poder sacar algo de esta pregunta se planteará la situación normal, hay un baño que consiste de un número muy grande de partículas de las cuales se conoce unos parámetros macroscópicos, dentro de este se pone un subsistema con un estado inicial arbitrario pero descorrelacionado con el ambiente. Ahora la pregunta es ¿ el subsistema se equilibra?, se verá que para cualquier estado inicial del subsistema y para casi todos los estados iniciales del baño el subsistema se equilibra. Esto incluye cuando el subsistema está lejos del equilibrio.
+El estado inicial del sistema está dado por $\ket{\Psi}_{SB}=\ket{\psi}_{S} \ket{\psi}_{B}$. El estado del subsistema es uno arbitrario $\ket{\psi}_{S}$ en el espacio de Hilbert. Dado unos parámetros macroscópicos el baño  debe cumplir con estos luego el estado del baño $\ket{\phi}_{B} \in \mathcal{H}_{B}^{R} \subset\mathcal{H}_{B}$. Esta restricción mantiene la generalidad de seguir en cualquier espacio de Hilbert restringido. Puede tener o no un sentido termodinámico o macroscópico. Pero la restricción es solo inicial al evolucionar el baño en el tiempo este puede moverse fuera de $\mathcal{H}_{B}^{R}$. Usando el teorema 2 para $\mathcal{H}_{R}= \ket{\psi}_{S} \otimes \mathcal{H}_{B}^{R}$ luego $d_{R}=d_{B}^{R}$ esto da como resultado que para casi todos los estados iniciales del baño y cualquier estado del subsistema $d^{eff}(\omega) \geq \frac{d_{B}^{R}}{4}$ lo cual significa que el subsistema se equilibrará para esas condiciones, mientras que $d_{B}^{R} >> d_{S}^{2}$.
+
+El mecanismo en que el subsistema se equilibra puede ser bastante complicada ya que el baño pasa por muchos estados diferentes y no llega el equilibrio. Aunque el baño no llegue a hacerlo y se salga del subespacio $\mathcal{H}_{B}^{R}$ y el subsistema  puede equilibrarse de todas formas. En principio puede que la evolución del subsistema sea sensible a la forma precisa del baño.
+Para ver que el baño no se equilibra de manera genérica se verá que $d^{eff}(\omega_{S})$ es mucho mayor que $d^{eff}(\rho_{B}(t))$ lo cual muestra que el baño sigue evolucionando y no se equilibra en ningún estado. Como los dos sistemas están en un estado puro $Rank(\rho_{B}(t))=Rank(\rho_{S}(t)) \geq d_{S}$ como la dimensión efectiva de un estado es siempre menor a su rango se obtiene 
+
+\begin{equation}
+d^{eff}(\rho_{B}(t)) \geq d_{S}
+\end{equation}
+
+pero 
+
+\begin{equation}
+d^{eff}(\omega_{B})\leq \frac{d_{eff}(\omega)}{d_{S}}
+\end{equation}
+
+Pero para un estado genérico el teorema 2 ii dice $d^{eff}(\omega) > \frac{d_{R}}{4}$ se tiene
+
+\begin{equation}
+d^{eff}(\omega_{B}) \leq \frac{d^{R}}{4d_{S}}=\frac{d_{B}^{R}}{4d_{S}} >>d_{S} \leq d^{eff}(\rho_{B}(t))
+\end{equation}
+\textbf{Independencia del estado inicial}
+LO que se ha mostrado hasta ahora ha sido como si el subsistema es pequeño este se equilibrará. Ahora el enfoque que se quiere mostrar es cual sería la dependencia del estado de equilibrio del subsistema. Hasta ahora el estado inicial podría hacer que el equilibrio sea un estado diferente dependiendo del inicial. Sea el estado de equilibrio del subsistema $\omega_{S}^{\psi}$.Como es conocido se desearía que el estado de equilibrio dependa solo de los parámetros macroscópicos y no del estado inicial microscópico.
+El teorema siguiente prueba que para casi todos los estados en un subsistema restringido llevan al mismo estado de equilibrio.
+\textbf{Teorema 3}:
+i) Casi todos los estados iniciales de un subespacio restringido bastante grande llevan al mismo estado de equilibrio de un subsistema pequeño. En particula, con $\langle .\rangle_{\psi}$ siendo el promedio sobre estados puros aleatoriamente uniformes $\ket{\psi(0)} \in \mathcal{H}_{R} \subset \mathcal{H}_{S} \otimes \mathcal{H}_{B}$ u $\Omega_{S}= \langle \omega_{S}^{\psi} \rangle_{\psi}$ :
+\begin{equation}
+\langle D(\omega_{S}^{\psi}, \Omega_{S}) \rangle_{\psi} \leq \sqrt{\frac{d_{S} \delta}{4d_{R}}} \leq \sqrt{\frac{d_{S}}{4d_{R}}}
+\end{equation}
+La primera desigualdad es más estricta pero más complicada 
+\begin{equation}
+\delta= \sum_{k}\bra{E_{k}}\frac{\Pi_{R}}{d_{R}}\ket{E_{k}} Tr_{S} \Big( Tr_{B} (\ket{E_{k}} \bra{E_{k}}) \Big)^{2} \leq  1
+\end{equation}
+Donde $\Pi_{k}$ es el proyector sobre $\mathcal{H}_{R}$
+ii)Paraunestado aleatorio $\ket{\psi} \in \mathcal{H}_{R}\subset \mathcal{H}$, la probabilidad que $D(\omega_{S}^{\psi},\Omega_{S}) > \frac{1}{2} \sqrt{\frac{d_{S} \delta}{d_{R}}}+ \epsilon$caiga exponencialmente con $\epsilon^{2}d_{R}$:
+\begin{equation}
+Pr_{\psi} \{ D(\omega_{S}^{\psi}, \Omega_{S}) > \frac{1}{2}\sqrt{\frac{d_{S} \delta}{d_{R}}} + \epsilon \} \leq 2exp(-C'\epsilon^{2}d_{R}),
+\end{equation}
+con $C'=\frac{2}{9 \pi^{3}}$ si se pone $\epsilon=d_{R}^{-1/3}$ da una distancia promedio pequeña con alta probabilidad cuando $d_{R}>>d_{S}$.
+
+\textbf{Independencia del estado del ambiente}
+PAra un estado inicial que sea el producto del estado del sistema y el del ambiente $\ket{\psi}_{SB}= \ket{\psi}_{S} \ket{\phi}_{B}$ en el espacio $\mathcal{H}_{R}=\ket{\psi} \otimes \mathcal{H}_{R}^{B}$.ya se mostró que para estados genéricos el ambiente causa que el subsistema se equilibre aunque el estado de equilibrio $\omega_{S}^{\psi}$ del subsistema podría  depender del estado inicial del baño $\ket{\phi}_{B}$. Esto no es así y casi todos los estados del baño en $\mathcal{H}_{B}^{R}$ llevan al mismo estado de equilibrio del subsistema simplemente usando el resultado anterior a  $\mathcal{H}_{B} = \ket{\psi}\otimes \mathcal{H}_{R}^{B}$ y luego $d_{R} = d_{R}^{B}$, si $d_{R}^{B}>>d_{S}$ para casi todos los estados iniciales del baño llevarán al subsistema al mismo estado de equilibrio $\omega_{S}$. como se usó la cota menos estricta este resultado no depende de la forma explícita de los estados de energías propios.
+\textbf{Independenciadelestado del sistema}: Como yase hadicho el subsistema en contacto con el baño llega al equilibrio sin importar su estado inicial pero sí depende del baño. Este resultado no se pudo resolver pero se da más indicios.
+Los problemas son que el estado de equilibrio no siempre es independiente del estado inicial del subsiste,a. si el subsistema puede cambiar al ambiente de forma drástica el estado de equilibrio sí dependerá del estado inicial del subsistema. aquí muestra que las dimensiones del espacio de Hilbert del subsistemas el ambiente son importante pero el valor se le haya dado una restricción al Hamiltoniano (Brechas de energías no degeneradas ) esta condición no están estricta como para no permitir cantidades conservadas en el subsistema cuando estas cantidades conservadas existen los estados del subsistema con diferentes constantes(estados inicial es diferentes )no podrán llegar al mismo estado de equilibrio.
 
 
